Removed separate UI for stager, merged behaviour into main class.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="app" class="container">
-			<!-- ko with: stager.ui.stage -->
+			<!-- ko with: stager.stage -->
 				<h2 data-bind="text: ui.label"></h2>
 				<!-- ko if: id === App.ME2.Stages.StageIDs.Setup -->
 					<h3>Teammates</h3>
@@ -197,7 +197,7 @@
 				<!-- /ko -->
 			<!-- /ko -->
 
-			<table class="table table-striped summary-table" data-bind="visible: stager.ui.stage().id !== App.ME2.Stages.StageIDs.Setup">
+			<table class="table table-striped summary-table" data-bind="visible: stager.stage().id !== App.ME2.Stages.StageIDs.Setup">
 				<thead>
 					<tr>
 						<th>Teammates</th>
@@ -209,7 +209,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<!-- ko with: stager.ui.teammates -->
+					<!-- ko with: stager.teammates -->
 						<!-- ko foreach: $data -->
 							<tr>
 								<td data-bind="attr: { class: (is_dead ? 'danger' : '') }">
@@ -263,7 +263,7 @@
 				</tbody>
 			</table>
 
-			<!-- ko with: stager.ui.stage -->
+			<!-- ko with: stager.stage -->
 				<button class="btn btn-primary" data-bind="enable: id > App.ME2.Stages.StageIDs.Setup, click: function () { $root.stager.previousStage() }">Previous</button>
 				<button class="btn btn-primary" data-bind="enable: ui.is_evaluatable, click: function () { $root.stager.nextStage() }">Next</button>
 			<!-- /ko -->
